k8s/arr-stack/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: arr-stack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: rinzler
      containers:
      - name: lidarr
        image: lscr.io/linuxserver/lidarr:latest
        ports:
        - containerPort: 8686
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
        - name: downloads
          mountPath: /downloads
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
      volumes:
      - name: config
        hostPath:
          path: /var/lib/docker/volumes/lidarr_data/_data
          type: Directory
      - name: media
        hostPath:
          path: /storage/media
          type: Directory
      - name: downloads
        hostPath:
          path: /storage/downloads
          type: Directory
